--- a/requirements.txt
+++ b/requirements.txt
@@ -1,126 +1,6 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-altgraph==0.17.3
-aniso8601==9.0.1
-annotated-types==0.6.0
-anyio==4.3.0
-async-timeout==4.0.2
-attrs==20.3.0
-beautifulsoup4==4.11.1
-blinker==1.7.0
-cachetools==5.2.1
-certifi==2022.12.7
-cffi==1.16.0
-charset-normalizer==2.1.1
-check50==3.3.11
-chromedriver-binary==124.0.6364.0.0
-cinemagoer==2022.12.27
-click==8.1.3
+Flask
+flask-cors
+requests
 cohere==5.1.1
-colorama==0.4.6
-cryptography==42.0.2
-cx-Freeze==6.14.2
-cx-Logging==3.1.0
-discord.py==2.1.1
-et-xmlfile==1.1.0
-exceptiongroup==1.2.0
-ffmpeg==1.4
-Flask==3.0.2
-Flask-Cors==4.0.0
-Flask-RESTful==0.3.10
-Flask-SQLAlchemy==3.1.1
-freetype-py==2.1.0.post1
-frozenlist==1.3.3
-future==0.18.3
-glfw==1.11.2
-google-api-core==2.11.0
-google-api-python-client==2.122.0
-google-auth==2.16.0
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.58.0
-greenlet==2.0.1
-h11==0.14.0
-hsluv==5.0.3
-httpcore==1.0.4
-httplib2==0.21.0
-httpx==0.27.0
-idna==3.4
-IMDbPY==2022.7.9
-imdby==0.1.5
-itsdangerous==2.1.2
-jellyfish==0.11.2
-Jinja2==3.1.2
-joblib==1.3.2
-kiwisolver==1.4.4
-lib50==3.0.11
-lief==0.12.3
-lxml==4.9.2
-MarkupSafe==2.1.2
-multidict==6.0.4
-mysql==0.0.3
-mysql-connector-python==8.0.32
-mysqlclient==2.1.1
-nltk==3.8.1
-numpy==1.24.1
-openpyxl==3.1.2
-optional-django==0.3.0
-outcome==1.3.0.post0
-p5==0.8.1
-packaging==23.2
-pandas==2.2.1
-pefile==2022.5.30
-pexpect==4.9.0
-Pillow==9.0.1
-protobuf==3.20.3
-ptyprocess==0.7.0
-py2exe==0.13.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybind11==2.10.3
-pycparser==2.21
-pydantic==2.6.4
-pydantic_core==2.16.3
-pygame==2.5.2
-pyinstaller==5.7.0
-pyinstaller-hooks-contrib==2022.15
-PyOpenGL==3.1.6
-pyparsing==3.0.9
-PyQt5==5.15.7
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.0
-pyreadline==2.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-pytz==2024.1
-pywin32-ctypes==0.2.0
-PyYAML==6.0.1
-react==4.3.0
-regex==2023.12.25
-requests==2.28.1
-rsa==4.9
-selenium==4.16.0
-six==1.16.0
-skia-python==87.5
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2.post1
-SQLAlchemy==2.0.28
-submit50==3.1.4
-termcolor==1.1.0
-textblob==0.18.0.post0
-tmdbsimple==2.9.1
-tqdm==4.66.2
-trio==0.23.1
-trio-websocket==0.11.1
-typing_extensions==4.10.0
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3==1.26.14
-vaderSentiment==3.3.2
-vispy==0.10.0
-webdriver-manager==4.0.1
-Werkzeug==3.0.1
-wsproto==1.2.0
-yarl==1.8.2
-youtube-dl==2021.12.17
+Werkzeug==2.2.2
+google-api-python-client==2.32.0
