--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
     "version": 2,
     "builds": [
-      { "src": "index.py", "use": "@vercel/python"}
+      { "src": "index.py", "use": "@vercel/python" ,
+      "config": { "python": "3.9" }}
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/" }
