--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "index.py", "use": "@vercel/python" ,
-      "config": { "python": "3.9" }}
+      { "src": "index.py", "use": "@vercel/python"}
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/" }
