--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,17 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "index.py", "use": "@vercel/python"}
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/" }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ],
+  "build": {
+    "env": {
+      "PYTHON_VERSION": "3.9"
+    }
   }
+}
