--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,9 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ],
-  "build": {
-    "env": {
-      "PYTHON_VERSION": "3.9"
-    }
+    "version": 2,
+    "builds": [
+      { "src": "index.py", "use": "@vercel/python"}
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/" }
+    ]
   }
-}
