--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/index.py", "use": "@vercel/python"}
+      { "src": "api", "use": "@vercel/python"}
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/" }
