--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "functions": {
       "api/**/*.py": {
-        "excludeFiles": ["**/my-app", "/__pycache__"]
+        "excludeFiles": "**/my-app"
       }
     }
 
